# Agent-Force

./: .env.example  .gitignore  README.md  adaptive_code_exec_report.json  adaptive_email_report.json  adaptive_example.py  adaptive_web_search_report.json  api_client.py  app.py  code_execution_agent_safety_report.json  config.py  email_agent_safety_report.json  email_safety_report.json  example.py  jira_mcp_demo.py  local_codex_agent.py  local_codex_mcp_agent.py  pyproject.toml  requirements.txt  run_adaptive.sh  run_dashboard.sh  run_eval.sh  run_server.sh  runs.json  theory.py  web_search_agent_safety_report.json
agents/: __init__.py  _mcp_utils.py  code_exec_agent.py  email_agent.py  jira_agent.py  web_search_agent.py
api/: __init__.py  server.py  store.py
components/: charts.py  eval_runner.py  metric_cards.py  recommendations.py  results_table.py  sidebar.py  topnav.py
examples/: adaptive_example.py  example.py
pages/: 1_overview.py  2_evaluation.py  3_results.py  4_history.py  4_recommendations.py
run_logs/: run_002b3616-7e66-4c6d-a809-d0022bf04d3c.json  run_04d95a98-0b4f-4d34-81dd-7f373a8c82ee.json  run_0f533636-03da-4477-9d81-d40b4f166623.json  run_2ab3bef5-f0aa-4dd1-96f7-bc3e01b4af4d.json  run_32ef98ee-d059-4b52-96b7-e8bc4946e097.json  run_37b8f28d-d19a-426b-85dc-534b40464d95.json  run_42fa131d-0701-46c3-b87c-7dda69dc46ba.json  run_440eb614-4eb0-4aaf-84bb-2e0d1e654543.json  run_447cf8af-c86d-4647-a201-f65b900c5c55.json  run_4973737a-3210-4131-8f20-0b3e153b4f3a.json  run_4986cda6-8450-49e8-af38-b4dc0f0da68a.json  (+28 more)
safety_kit/: __init__.py  agent.py  (+9 more)
(+51 files in other folders)
